--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <!-- Write your HTML in this file -->
-doc
+<!DOCTYPE html>
+<html>
+<head>
+<title>Learn Lab example</title>
+</head>
+
+<body>
+The content of the document......
+</body>
+
+</html>
