--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
 <head>
 <title>Learn Lab example</title>
+
 </head>
 
 <body>
-The content of the document......
+<p> </p>The content of the document......
 </body>
 
 </html>
